-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8213079 | 11.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b02 |
Fails like:
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp: In static member function 'static void VtableStubs::check_and_set_size_limit(bool, int, int)':
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:154:24: error: 'Trace' was not declared in this scope
if (log_is_enabled(Trace, vtablestubs)) {
^~~~~
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:154:31: error: 'vtablestubs' was not declared in this scope
if (log_is_enabled(Trace, vtablestubs)) {
^~~~~~~~~~~
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:154:42: error: 'log_is_enabled' was not declared in this scope
if (log_is_enabled(Trace, vtablestubs)) {
^
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:156:30: error: 'log_trace' was not declared in this scope
... (rest of output omitted)
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp: In static member function 'static void VtableStubs::check_and_set_size_limit(bool, int, int)':
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:154:24: error: 'Trace' was not declared in this scope
if (log_is_enabled(Trace, vtablestubs)) {
^~~~~
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:154:31: error: 'vtablestubs' was not declared in this scope
if (log_is_enabled(Trace, vtablestubs)) {
^~~~~~~~~~~
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:154:42: error: 'log_is_enabled' was not declared in this scope
if (log_is_enabled(Trace, vtablestubs)) {
^
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/vtableStubs.cpp:156:30: error: 'log_trace' was not declared in this scope
... (rest of output omitted)
- backported by
-
JDK-8213079 Minimal and Zero non-PCH builds fail after JDK-8207343 (Automate vtable/itable stub size calculation)
-
- Resolved
-
- relates to
-
JDK-8207343 Automate vtable/itable stub size calculation
-
- Resolved
-